User data 'skelett' done

--- a/index.html
+++ b/index.html
@@ -20,27 +20,51 @@
         <div class="user-info">
             <div class="img-container"></div>
             <div class="user-container">
-                <div class="account-name"></div>
-                <div class="account-data"></div>
+                <div class="account-name">
+                    <div class="info-container">
+                        <h2 class="username">The Octocat</h2>
+                        <a class="tag" href="">@octocat</a>
+                        <p class="bio">This profile has no bio</p>
+                    </div>
+                    <div class="joined-container">
+                        <p class="joined-date">Joined 28 Jan 2011</p>
+                    </div>
+                </div>
+                <div class="account-data">
+                    <div class="data-container">
+                        <div class="data-imput">
+                            <p class="data-headers">Repos</p>
+                            <h5 class="data-numbers">8</h5>
+                        </div>
+                        <div class="data-imput">
+                            <p class="data-headers">Followers</p>
+                            <h5 class="data-numbers">3938</h5>
+                        </div>
+                        <div class="data-imput">
+                            <p class="data-headers">Following</p>
+                            <h5 class="data-numbers">9</h5>
+                        </div>
+                    </div>
+                </div>
                 <div class="account-links">
                     <div class="links">
                         <div class="link">
                             <img class="link-icon" src="./assets/icon-location.svg" alt="">
-                            <p class="link-text"> San fransissco</p>
+                            <p id="location-text" class="link-text"> San fransissco</p>
                         </div>
                         <div class="link">
                             <img class="link-icon" src="./assets/icon-website.svg" alt="">
-                            <p class="link-text"> San fransissco</p>
+                            <p id="website-text" class="link-text"> San fransissco</p>
                         </div>
                     </div>
                     <div class="links">
                         <div class="link">
                             <img class="link-icon" src="./assets/icon-twitter.svg" alt="">
-                            <p class="link-text"> San fransissco</p>
+                            <p id="twitter-text" class="link-text"> San fransissco</p>
                         </div>
                         <div class="link">
                             <img class="link-icon" src="./assets/icon-company.svg" alt="">
-                            <p class="link-text"> San fransissco</p>
+                            <p id="company-text" class="link-text"> San fransissco</p>
                         </div>
                     </div>
                 </div>
