added header + small changes

--- a/index.html
+++ b/index.html
@@ -11,14 +11,22 @@
 
 <body>
     <div class="main-container">
-        <div class="heading"></div>
+        <div class="heading">
+            <h1>devfinder</h1>
+            <button class="btn-light-mode">
+                <p class="btn-text">light</p>
+                <img src="./assets/icon-sun.svg" alt="">
+            </button>
+        </div>
         <div class="search-bar">
             <img class="search-icon" src="./assets/icon-search.svg" alt="">
             <input class="search-input" type="text" placeholder="Search Github username...">
             <button class="search-btn">Search</button>
         </div>
         <div class="user-info">
-            <div class="img-container"></div>
+            <div class="img-container">
+                <img src="https://avatars.githubusercontent.com/u/109481615?s=400&v=4" alt="" class="avatar">
+            </div>
             <div class="user-container">
                 <div class="account-name">
                     <div class="info-container">
